--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,16 +26,16 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup nodejs
-      - uses: actions/setup-node@v4.1.0
+        uses: actions/setup-node@v4.1.0
 
       - name: Install dependences
-      - run: npm install
+        run: npm install
 
       - name: Build Angular APP
-      - run: npm run build:prod
+        run: npm run build:prod
 
       - name: Deploy Githun page
-      - uses: crazy-max/ghaction-github-pages@v4.1.0
+        uses: crazy-max/ghaction-github-pages@v4.1.0
         with:
           build_dir: dist/angular-ci/browser
         env:
