--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,34 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Angular-CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ "main" ]
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+permissions:
+  contents: write
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # Setup nodejs
       - name: Setup nodejs
         uses: actions/setup-node@v4.1.0
 
-      # Install dependencies
-      - name: Install deps
-        run: npm i
+      - name: Install dependences
+        run: npm install
 
-      # Build app bunlde
-      - name: Build app bundle
+      - name: Build Angular APP
         run: npm run build:prod
 
-      # Route file renaming
-      - name: Rename index for routing
-        run: mv dist/browser/index.csr.html dist/browser/index.html
-      # Deploy GitHub pages
-      - name: Deploy GitHub pages
+      - name: Deploy Github pages
         uses: crazy-max/ghaction-github-pages@v4.1.0
         with:
-          build_dir: dist/browser
+          build_dir: dist/angular-ci/browser
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
