--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,34 @@
+# This is a basic workflow to help you get started with Actions
+
 name: Angular-CI
 
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
+
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-permissions:
-  contents: write
-
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
       - name: Setup nodejs
         uses: actions/setup-node@v4.1.0
 
-      - name: Install dependences
+      - name: Install dependencies
         run: npm install
 
       - name: Build Angular APP
@@ -29,7 +37,7 @@ jobs:
       - name: Rename Index.csr.html to index.html
         run: mv dist/angular-tutorial/browser/index.csr.html dist/angular-tutorial/browser/index.html
 
-      - name: Deploy Github pages
+      - name: Deploy GitHub pages
         uses: crazy-max/ghaction-github-pages@v4.1.0
         with:
           build_dir: dist/angular-tutorial/browser
